@@ -1,5 +1,7 @@
 Changes in 1.1.0
 ----------------
+** Improvement
+    * [FELIX-6375] - Require Java 8 as minimum version
 ** Bug
     * [FELIX-6371] - JSONConfigurationWriter does not escape backslash and other chars
 
